manifests/manifests/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plarail2021-soft-frontend
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: plarail2021-soft-frontend
  template:
    metadata:
      labels:
        app: plarail2021-soft-frontend
    spec:
      containers:
        - name: plarail2021-soft-frontend
          image: ghcr.io/ueckoken/plarail2021-soft-frontend:1be9e92-1637241930 # {"$imagepolicy": "plarail2021:frontend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
