manifests/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plarail2021-soft-frontend
  namespace: plarail2021
spec:
  type: NodePort
  selector:
    app: plarail2021-soft-frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
